force-app/main/default/objects/School__c/fields/School_Address__c.field-meta.xml
<CustomField>
    <fullName>School_Address__c</fullName>
    <label>School Address</label>
    <type>TextArea</type>
</CustomField>