force-app/main/default/objects/School__c/fields/School_Email__c.field-meta.xml
<CustomField>
    <fullName>School_Email__c</fullName>
    <label>School Email</label>
    <type>Email</type>
</CustomField>