force-app/main/default/objects/School__c/fields/School_Phone__c.field-meta.xml
<CustomField>
    <fullName>School_Phone__c</fullName>
    <label>School Phone</label>
    <type>Phone</type>
</CustomField>