force-app/main/default/objects/School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>School_Address__c</columns>
    <columns>Fees__c</columns>
    <columns>School_Email__c</columns>
    <columns>School_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>